// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input with type password matches snapshot 1`] = `
<FormItem>
  <Password
    action="click"
    className=""
    iconRender={[Function]}
    name=""
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    placeholder="test"
    type="password"
    value=""
    visibilityToggle={true}
  />
</FormItem>
`;

exports[`Input with type search matches snapshot 1`] = `
<FormItem>
  <Search
    className=""
    name=""
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    placeholder="test"
    type="search"
    value=""
  />
</FormItem>
`;

exports[`Input with type text matches snapshot 1`] = `
<FormItem>
  <Input
    className=""
    name=""
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    placeholder="test"
    type="text"
    value=""
  />
</FormItem>
`;
